crates/reinhardt-pages/tests/ui/form/fail/derived_duplicate_name.stderr
error: duplicate derived item name: 'value'
  --> tests/ui/form/fail/derived_duplicate_name.rs:12:4
   |
12 |             value: |form| form.x().get() * form.y().get(),
   |             ^^^^^
